--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "Poche",
+  "name": "wallabag",
   "version": "1.0",
   "manifest_version": 2,
-  "description": "Open Poche post interface from inside Chrome.",
+  "description": "Open wallabag post interface from inside Chrome.",
   "icons": { "16": "assets/16x16.png",
          "48": "assets/48x48.png",
         "128": "assets/128x128.png" },
   "browser_action": {
     "default_icon": "assets/button_icon.png",
-    "default_title" : "Open Poche",
+    "default_title" : "Open wallabag",
     "default_popup": "html/popup.html"
   },
   "options_page" : "fancy-settings/index.html",
